# tata

./: pyproject.toml
src/tata/: tata.py
src/tata.egg-info/: PKG-INFO  SOURCES.txt
